--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,9 +5,45 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        
+        <style>
+            body {
+            background-color: #eeeded!important;
+            }
+            .container {
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,.1);
+            padding: 30px
+            }
+            button, a{
+            margin: 3px!important;
+            }
+            input, textarea, select {
+            max-width: 400px;
+            }
+            .select2-container {
+            display: block!important;
+            }
+            .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
+            margin-top: -1px!important;
+            }
+            .select2-container--default .select2-selection--multiple .select2-selection__choice__display {
+            padding-left: 7px;
+            }
+            #resources >div {
+            margin-top: 15px;
+            }
+            label {
+            margin-top: 10px;
+            }
+        </style>
+
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+        <link href="/jquery.dataTables.yadcf.css" rel="stylesheet">
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
@@ -15,5 +51,11 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+
+
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+        <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+        <script src="/jquery.dataTables.yadcf.js"></script>
     </body>
 </html>
