--- a/templates/coder/index.html.twig
+++ b/templates/coder/index.html.twig
@@ -73,7 +73,7 @@
 {% block body %}
     <h1>Coder index</h1>
 
-    <table class="table">
+    <table class="table" id="myTable">
         <thead>
             <tr>
                 <th>Id</th>
@@ -93,17 +93,14 @@
                 <td>{{ coder.name }}</td>
                 <td>{{ coder.surname }}</td>
                 <td>{{ coder.description }}</td>
-                <td>{{ coder.url }}</td>
+                <td>{{ coder.Fk }}</td>
                 <td>{% if coder.FkCompetence is iterable %}
                         {% for c in coder.FkCompetence %}
-                        <span class="badge text-bg-success rounded-pill">{{c.name}}</span>
+                            <span class="badge text-bg-success rounded-pill">{{c.name}}</span>
                         {% endfor %}
                     {% endif %}
                 </td>
-                <td>
-                    <a href="{{ path('app_coder_show', {'id': coder.id}) }}">show</a>
-                    <a href="{{ path('app_coder_edit', {'id': coder.id}) }}">edit</a>
-                </td>
+                <td>{{ coder.url }}</td>
             </tr>
         {% else %}
             <tr>
@@ -118,43 +115,17 @@
 
     <script>
         $(document).ready( function () {
-        var dataTable = $('#myTable').DataTable({
-        "columnDefs": [
-        {
-        "targets": 7,
-        "className": 'scrollable-column',
-        "createdCell": function (td) {
-        $(td).addClass('scrollable-cell');
-        }
-        }
-        ]
-        });
-        yadcf.init(dataTable, [{
-        column_number: 0,
-        data: [{% for c in FkCompetence %}'{{c.name}}', {% endfor %}]
-        {# }, {
-        column_number: 1,
-        data: [{% for c in theme %}'{{c.name}}', {% endfor %}]
-        }, {
-        column_number: 2,
-        data: [{% for s in subtopic %}'{{s.name}}', {% endfor %}]
-        }, {
-        column_number: 3,
-        data: [{% for ty in type %}'{{ty.name}}', {% endfor %}]
-        }, {
-        column_number: 4,
-        filter_type: "text"
-        }, {
-        column_number: 5,
-        data: [{% for u in user %}'{{u.email}}', {% endfor %}]
-        }, {
-        column_number: 6,
-        data: ['Yes', 'No']
-        }, {
-        column_number: 7,
-        filter_type: "text"
-        } #}
-        ]);
+            var dataTable = $('#myTable').DataTable({
+                "columnDefs": [
+                {
+                    "targets": 4,
+                    "className": 'scrollable-column',
+                    "createdCell": function (td) {
+                    $(td).addClass('scrollable-cell');
+                }
+            }]
+            });
+
         });
     </script>
 {% endblock %}
