--- a/templates/coder/show.html.twig
+++ b/templates/coder/show.html.twig
@@ -1,38 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Coder{% endblock %}
+{% block title %} {{coder.name}} | {{coder.surname}} {% endblock %}
 
 {% block body %}
-    <h1>Coder</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ coder.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ coder.name }}</td>
-            </tr>
-            <tr>
-                <th>Surname</th>
-                <td>{{ coder.surname }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ coder.description }}</td>
-            </tr>
-            <tr>
-                <th>Url</th>
-                <td>{{ coder.url }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_coder_index') }}">back to list</a>
-
-   
+    
+    <embed src='https://coderf5.es/cvs/{{coder.url}}.pdf#toolbar=1&navpanes=1&scrollbar=0' type='application/pdf' 
+    style="width: 100%; height: 1000px;"/>
 
     
 {% endblock %}
